fix: 말풍선 z-index 수정

--- a/css/travel/index.css
+++ b/css/travel/index.css
@@ -86,6 +86,7 @@
   font-size: 14px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   display: none !important;
+  z-index: 101;
 }
 .pull.show {
   display: block !important;
